--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="form__group">
-        <h6 class="form__title">ФИО</h6>
+        <h6 class="form__title">Контакты</h6>
         <div class="form__item">
           <input type="email" name="email" placeholder="E-mail">
         </div>
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="form__group">
-        <h6 class="form__title">ФИО</h6>
+        <h6 class="form__title">Дата рождения</h6>
         <div class="form__item">
           <input type="date" name="date" placeholder="Дата рождения">
         </div>
